knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Shift Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>