knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Shift__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Cloned_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>