knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Existing_Shift_Type_Added__c.field-meta.xml
<CustomField>
    <fullName>Existing_Shift_Type_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Shift Type Added?</label>
    <type>Checkbox</type>
</CustomField>