knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/New_Shift_Bonus_Type_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Shift_Bonus_Type_Added__c</fullName>
    <formula>IF( AND( ISPICKVAL( Shift_Name__r.Code_Set_Sub_Type__c , &apos;Bonus&apos;) , New_Shift_Type_Added__c  = true) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Shift Bonus Type Added?</label>
    <type>Checkbox</type>
</CustomField>