knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <label>Shift End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>