knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Shift_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Full_Name__c</fullName>
    <formula>Shift_Name__r.Name &amp; &quot; &quot;  &amp;  Shift_Iteration__c</formula>
    <label>Shift Full Name</label>
    <type>Text</type>
</CustomField>