knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Shift_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Shift_Iteration__c</fullName>
    <label>Shift Iteration</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>