knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shift Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>Shift</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>