knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP/PA</fullName>
            </value>
            <value>
                <fullName>MD/DO</fullName>
            </value>
            <value>
                <fullName>RN/LPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>