knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/validationRules/Create_Shift_Only_For_Draft_Contracts.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Shift_Only_For_Draft_Contracts</fullName>
    <active>true</active>
    <description>Shift records should only be created when the related Contract is in &quot;Draft&quot; status.</description>
    <errorConditionFormula>AND(  Contract__r.RecordType.DeveloperName = &apos;Client&apos;, NOT(ISPICKVAL( Contract__r.Status ,&apos;Draft&apos;)))</errorConditionFormula>
    <errorMessage>Contract must be in “Draft” status in order to add a new Shift.</errorMessage>
</ValidationRule>