knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Shift__c/validationRules/Shift_Deletion_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Shift_Deletion_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Is_Deleted__c = TRUE,
    ISBLANK(Cloned_From__c)
)</errorConditionFormula>
    <errorMessage>To delete Shift records, please uncheck the Is Deleted field and use the delete button.</errorMessage>
</ValidationRule>